Overflow Fixed

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    /* overflow-x: scroll; */
 }
 
 /* UNIVERSAL STYLE */
@@ -308,6 +309,7 @@ nav{
         flex-direction: column;
         align-items: flex-start;
         height: 100%;
+        overflow-x: hidden;
     }
     .hero-content h1{
         width:327px;
